@@ -10,11 +10,11 @@ todo:
 - simplify find_branches by using Transport.list_dir() ?
 - fix autorealm repository
 - avoid extra connect in logwalker?
-- allow branching scheme specified in magic property in repository root
 - free memory!
 - report changes to delta editor in Branch.pull()
 - more blackbox tests
 - transform file ids in workingtree in svn-upgrade
+- allow branching scheme specified in magic property in repository root
 - more intelligent mechanism for finding branching scheme. Look at directory structure in current tree?
 
 working trees:
